[metadata]
name = homematicip-exporter
summary = HomematicIP Exporter
description-file = README.md
license = Apache-2
author = Arno Uhlig
author-email = arno.uhlig@gmail.com
home-page = https://github.com/auhlig/homematicip-exporter
classifier =
	Development Status :: 4 - Beta
	Environment :: HomematicIP
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
